--- a/src/app/card-info/card-info.component.html
+++ b/src/app/card-info/card-info.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-body">
         <p>Brand:{{car.brand}}</p>
-        <p>Models Number:{{car.models.length}}</p>
+        <!-- <p>Models Number:{{car.models.length}}</p> -->
     </div>
     <p class="close-x-c text-right" (click)="close()">&#x2715;</p>
 
