--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,10 +28,10 @@
   <div class="col-md-6 mt-5" id="car-{{i}}" *ngFor="let x of cars|async;let i = index">
     <app-card-info [car]="x" [index]="i"></app-card-info>
   </div>
-  <p class="alert alert-danger" *ngIf="cars">Pas de données</p>
   
 </div>
 </div>
+<p class="alert alert-danger" *ngIf="(cars|async)?.length==0">Pas de données</p>
 
 
 <button type="button" class="btn btn-primary" id="liveToastBtn" (click)="show()">Show live toast</button>
