--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container mb-4">
   <div class="row">
-    <div class="col-md-6 mx-auto card mt-2">
+    <div class="col-md-6 mx-auto  mt-2">
+    <div class="card">
       <div class="card-body">
         <form method="post" (ngSubmit)="envoyer($event)">
           <h1 class="animate__animated animate__slideInDown">Formulaire produit
@@ -23,66 +24,16 @@
         </form>
       </div>
     </div>
+    </div>
 </div>
 <div class="row mt-2">
-  <div class="col-md-6 mt-5" id="car-{{i}}" *ngFor="let x of cars|async;let i = index">
+  <div class="col-md-6 mb-2" id="car-{{i}}" *ngFor="let x of car$|async;let i = index">
     <app-car-info [car]="x" [index]="i"></app-car-info>
   </div>
   
 </div>
 </div>
-<p class="alert alert-danger" *ngIf="(cars|async)?.length==0">Pas de données</p>
+<p class="alert alert-danger" *ngIf="(car$|async)?.length==0">Pas de données</p>
 
 
-<button type="button" class="btn btn-primary" id="liveToastBtn" (click)="reload()">Show live toast</button>
-
-<div class="toast-container">
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-      <img src="..." class="rounded me-2" alt="...">
-      <strong class="me-auto">Bootstrap</strong>
-      <small class="text-muted">just now</small>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body">
-      See? Just like this.
-    </div>
-  </div>
-
-  <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="toast-header">
-      <img src="..." class="rounded me-2" alt="...">
-      <strong class="me-auto">Bootstrap</strong>
-      <small class="text-muted">2 seconds ago</small>
-      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-    </div>
-    <div class="toast-body">
-      Heads up, toasts will stack automatically
-    </div>
-  </div>
-</div>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<button type="button" class="btn btn-primary" (click)="reload()">Get live data from remote server</button>
