--- a/src/app/car-info/car-info.component.css
+++ b/src/app/car-info/car-info.component.css
@@ -8,3 +8,8 @@
     cursor: pointer;
     
 }
+.card-item:hover{
+    transform: translateY(3px);
+    box-shadow: 0 3px 7px rgba(0, 0, 0,0.7);
+    transition: transform 1s ease;
+}
