--- a/src/app/car-info/car-info.component.html
+++ b/src/app/car-info/car-info.component.html
@@ -1,6 +1,8 @@
-<div class="card">
+<div class="card card-item">
     <div class="card-body">
-        <p>Brand:{{car.brand}}</p>
+        <small>Position:{{index+1}}</small>
+
+        <p>Brand:{{car.brand|reLength:10}}</p>
         <!-- <p>Models Number:{{car.models.length}}</p> -->
     </div>
     <p class="close-x-c text-right" (click)="close()">&#x2715;</p>
