--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~animate.css/animate.css';
+
+body{
+    background-color: rgb(164, 169, 173);
+}
