--- a/src/app/car-info/car-info.component.html
+++ b/src/app/car-info/car-info.component.html
@@ -1,8 +1,8 @@
 <div class="card card-item">
-    <div class="card-body">
+    <div class="card-body card-body-item">
         <small>Position:{{index+1}}</small>
 
-        <p>Brand:{{car.brand|reLength:10}}</p>
+        <p>Brand:{{car.brand|reLength:15:'...'}}</p>
         <!-- <p>Models Number:{{car.models.length}}</p> -->
     </div>
     <p class="close-x-c text-right" (click)="close()">&#x2715;</p>
