--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!-- <app-side-bar></app-side-bar> -->
 <div class="container mb-4">
   <div class="row">
     <div class="col-md-6 mx-auto  mt-2">
@@ -33,3 +34,4 @@
 
 
 <button type="button" class="btn btn-primary" (click)="reload()">Get live data from remote server</button>
+<app-card></app-card>
