--- a/src/app/car-info/car-info.component.css
+++ b/src/app/car-info/car-info.component.css
@@ -10,14 +10,14 @@
 }
 
 .card-item{
-    transition: transform .500s ease;
+    transition: transform .300s ease-in;
     
 }
 .card-item:hover{
-    /* transform: translateY(-3px); */
-    transform: scale(1.0600);
+    transform: translateY(-3px);
+    /* transform: scale(1.03); */
     box-shadow: 0 3px 7px rgba(0, 0, 0,0.3);
-    transition: transform .500s ease;
+    transition: transform .500s ease-in-out;
 }
 .card-body-item{
     position :relative;
