--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="card p-3 mb-2">
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-start">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
                         <div class="ms-2 c-details">
