changement du nom

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -6,7 +6,7 @@
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
                         <div class="ms-2 c-details">
-                            <h6 class="mb-0">Mailchimp</h6> <span>1 days ago</span>
+                            <h6 class="mb-0">No Monkey allow </h6> <span>1 days ago</span>
                         </div>
                     </div>
                     <div class="badge"> <span>Design</span> </div>
