--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5 mb-3">
     <div class="row">
         <div class="col-md-4">
-            <div class="card p-3 mb-2">
+            <div class="card card-item p-3 mb-2">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-mailchimp"></i> </div>
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card p-3 mb-2">
+            <div class="card card-item p-3 mb-2">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-dribbble"></i> </div>
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card p-3 mb-2">
+            <div class="card card-item p-3 mb-2">
                 <div class="d-flex justify-content-between">
                     <div class="d-flex flex-row align-items-center">
                         <div class="icon"> <i class="bx bxl-reddit"></i> </div>
