--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
 
 </div>
 </div>
-<p class="alert alert-danger" *ngIf="(car$|async)?.length==0">Pas de données</p>
+<p class="alert alert-danger" *ngIf="(car$|async)?.length===0">Pas de données</p>
 
 
 <button type="button" class="btn btn-primary" (click)="reload()">Get live data from remote server</button>
